--- a/wsgi/myproject/mainsite/templates/registration/password_reset_form.html
+++ b/wsgi/myproject/mainsite/templates/registration/password_reset_form.html
@@ -1,5 +1,6 @@
 {% extends 'mainsite/base.html' %}
 {% block content %}
+
 <div class="row main">
 				<div class="panel-heading">
 	               <div class="panel-title text-center">
@@ -8,8 +9,7 @@
 	               	</div>
 	            </div>
 				<div class="main-login main-center">
-					<form class="form-horizontal" method="post" action="#">
-
+					<form class="form-horizontal" method="post" >{% csrf_token %}
 						<div class="form-group">
 							<label for="email" class="cols-sm-2 control-label">Your Email</label>
 							<div class="cols-sm-10">
@@ -21,13 +21,13 @@
 							</div>
 						</div>
 
-						<div class="form-group ">
-							<button type="button" class="btn btn-primary btn-lg btn-block login-button">Reset password</button>
-						</div>
+
+							<input type="submit" value="Reset Password" class="btn btn-primary btn-lg btn-block login-button"></input>
+		</form>
+										</div>
+
 						<div class="login-register">
-				            <a href="index.php">Login</a>
+				            <a href="{% url 'login'}">Login</a>
 				         </div>
 					</form>
-				</div>
-			</div>
 {% endblock content %}
